# epc_pipeline

./: .gitignore  Data-Contract.md  Dockerfile.dbt-snowflake  README.md  copy.env  docker-compose.yml  epc-dashboard.pbix  pyproject.toml
airflow/dags/: dbt_transformations.py  dev_ingestion.py  dummy.py  dynamic_dag_example.py  s3_to_snowflake.py
dbt/: profiles copy.yml
dbt/dbt_epc/: dbt_project.yml
dbt/dbt_epc/macros/: get_incremental_filter.sql  incremental_filter.sql  merge_scd2.sql  property_scd2_merge.sql
dbt/dbt_epc/models/presentation/: example.sql  properties.yml  property_delta.sql
dbt/dbt_epc/models/raw/: properties.yml  raw_sources.yml
dbt/dbt_epc/models/staging/: properties.yml  stg_display_certificates.sql  stg_display_recommendations.sql  stg_domestic_certificates.sql  stg_domestic_recommendations.sql  stg_non_domestic_certificates.sql  (+1 more)
docs/: dbt_project_structure.txt  file_structure.txt
pbi/: epc-dashboard-import.pbip
pbi/epc-dashboard-import.Report/: .platform  definition.pbir
pbi/epc-dashboard-import.Report/definition/: report.json
pbi/epc-dashboard-import.SemanticModel/: .platform  diagramLayout.json
pbi/epc-dashboard-import.SemanticModel/definition/: model.tmdl  relationships.tmdl
snowflake/: 1_dbt_snowflake_init.sql  2_integrations_fileformats_stages.sql  3_raw_tables_ddl.sql  dbt_snowflake_init.sql  integrations_fileformats_stages.sql  raw_tables_ddl.sql  s3_copy.sql
src/ingestion/: epc_ingestion.py  s3_to_snowflake.py
src/utils/: api_client.py  bucket.py  bucket_client.py  file_ops.py  logger.py
(+57 files in other folders)
