[project]
name = "epc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.0",
    "apache-airflow-providers-amazon>=9.15.0",
    "apache-airflow-providers-snowflake>=6.5.4",
    "pandas>=2.3.3",
]
